--- a/styles/layout.less
+++ b/styles/layout.less
@@ -48,7 +48,8 @@
 				padding: @item-padding;
 				text-decoration: none;
 				
-				&.selected {
+				&.selected,
+				&:hover {
 					background-color: @secondary-color;
 				}
 			}
