--- a/styles/layout.css
+++ b/styles/layout.css
@@ -127,6 +127,56 @@ table {
  ------------------------------------------ */
 /* Variables
  ------------------------------------------ */
+body {
+  font-family: 'Arial';
+}
+.navbar {
+  height: 45px;
+  background-color: #4a87b6;
+  background: linear-gradient(0deg, #3a6a8a, #3a6a8a 1px, #4a87b6 1px, #4a87b6);
+  color: #ffffff;
+}
+.navbar .navitem {
+  width: 200px;
+  -webkit-transition: background 0.1s ease-in;
+  -moz-transition: background 0.1s ease-in;
+  -o-transition: background 0.1s ease-in;
+  transition: background 0.1s ease-in;
+}
+.navbar .navitem .icon {
+  -webkit-transition: -webkit-transform 0.3s ease-in;
+  -moz-transition: -webkit-transform 0.3s ease-in;
+  -o-transition: -webkit-transform 0.3s ease-in;
+  transition: -webkit-transform 0.3s ease-in;
+  -webkit-transition: transform 0.2s ease-in;
+  -moz-transition: transform 0.2s ease-in;
+  -o-transition: transform 0.2s ease-in;
+  transition: transform 0.2s ease-in;
+}
+.navbar .navitem:hover {
+  background-color: #ffffff;
+  color: #333333;
+}
+.navbar .navitem:hover .icon {
+  -webkit-transform: rotate(-180deg);
+  -moz-transform: rotate(-180deg);
+  -o-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+}
+.navbar .navitem .inner {
+  padding: 0 5px;
+  line-height: 45px;
+}
+.spaceswitcher {
+  position: absolute;
+  display: none;
+  width: 500px;
+  line-height: 100%;
+  border: 1px solid #c0c0c0;
+  border-top: none;
+  box-shadow: 0px 2px 5px #eee;
+  overflow: hidden;
+}
 .spaceswitcher .search {
   margin: 5px;
   background: url(../images/search.png) no-repeat left center;
@@ -172,4 +222,23 @@ table {
 .highlight {
   background-color: #ffff00;
   font-style: italic;
+}
+[class*="icon-"] {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/sprites.svg);
+  background-repeat: no-repeat;
+}
+.icon-search {
+  background-position: 0 0;
+  width: 16px;
+}
+.icon-arrow-up {
+  background-position: -32px 0;
+  width: 16px;
+}
+.icon-arrow-down {
+  background-position: -64px 0;
+  width: 16px;
 }
