--- a/styles/layout.css
+++ b/styles/layout.css
@@ -171,6 +171,7 @@ body {
   position: absolute;
   display: none;
   width: 500px;
+  max-height: 80%;
   line-height: 100%;
   border: 1px solid #c0c0c0;
   border-top: none;
@@ -189,6 +190,7 @@ body {
   width: 100%;
   background: transparent;
   border: none;
+  font-size: 100%;
   outline: none;
   -webkit-appearance: none;
 }
