--- a/styles/layout.less
+++ b/styles/layout.less
@@ -56,6 +56,7 @@ body {
 	position: absolute;
 	display: none;
 	width: 500px;
+	max-height: 80%;
 	line-height: 100%;
 	border: 1px solid #c0c0c0;
 	border-top: none;
@@ -74,6 +75,7 @@ body {
 			width: 100%;
 			background: transparent;
 			border: none;
+			font-size: 100%;
 			outline: none;
 			-webkit-appearance: none;
 		}
