--- a/styles/layout.css
+++ b/styles/layout.css
@@ -163,7 +163,7 @@ body {
   -o-transform: rotate(-180deg);
   transform: rotate(-180deg);
 }
-.navbar .navitem .inner {
+.navbar .navitem .text {
   padding: 0 5px;
   line-height: 45px;
 }
@@ -172,30 +172,28 @@ body {
   display: none;
   width: 500px;
   max-height: 80%;
-  line-height: 100%;
   border: 1px solid #c0c0c0;
   border-top: none;
   box-shadow: 0px 2px 5px #eee;
   overflow: hidden;
 }
-.spaceswitcher .search {
-  margin: 5px;
-  background: url(../images/search.png) no-repeat left center;
-  border: 1px solid #eee;
+.spaceswitcher .search .inner {
+  padding: 5px;
 }
-.spaceswitcher .search input {
+.spaceswitcher .search .inner input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0;
-  padding: 10px 10px 10px 20px;
+  padding: 0 10px 0 25px;
   width: 100%;
-  background: transparent;
-  border: none;
+  height: 40px;
+  background: #ffffff url(../images/search.png) no-repeat 5px center;
+  border: 1px solid #eee;
   font-size: 100%;
   outline: none;
   -webkit-appearance: none;
 }
 .spaceswitcher .results {
-  max-height: 300px;
   overflow-y: auto;
 }
 .spaceswitcher .results .group {
