--- a/styles/layout.less
+++ b/styles/layout.less
@@ -45,7 +45,7 @@ body {
 				.transform(rotate(-180deg));
 			}
 		}
-		.inner {
+		.text {
 			padding: 0 5px;
 			line-height: @navbar-height;
 		}
@@ -57,34 +57,30 @@ body {
 	display: none;
 	width: 500px;
 	max-height: 80%;
-	line-height: 100%;
 	border: 1px solid #c0c0c0;
 	border-top: none;
 	box-shadow: 0px 2px 5px #eee;
 	overflow: hidden;
 
 	.search {
-		margin: 5px;
-		background: url(../images/search.png) no-repeat left center;
-		border: 1px solid #eee;
-		
-		input {
-			box-sizing: border-box;
-			margin: 0;
-			padding: 10px 10px 10px 20px;
-			width: 100%;
-			background: transparent;
-			border: none;
-			font-size: 100%;
-			outline: none;
-			-webkit-appearance: none;
-		}
-		input:active {
+		.inner {
+			padding: @item-padding;
+			
+			input {
+				.box-sizing();
+				padding: 0 10px 0 @item-padding+20;
+				width: 100%;
+				height: 40px;
+				background: #fff url(../images/search.png) no-repeat @item-padding center;
+				border: 1px solid #eee;
+				font-size: 100%;
+				outline: none;
+				-webkit-appearance: none;
+			}
 		}
 	}
 	
 	.results {
-		max-height: 300px;
 		overflow-y: auto;
 
 		.group {
