--- a/styles/layout.css
+++ b/styles/layout.css
@@ -136,8 +136,11 @@ body {
   background: linear-gradient(0deg, #3a6a8a, #3a6a8a 1px, #4a87b6 1px, #4a87b6);
   color: #ffffff;
 }
+.navbar .navbrand,
 .navbar .navitem {
-  width: 200px;
+  float: left;
+}
+.navbar .navitem {
   -webkit-transition: background 0.1s ease-in;
   -moz-transition: background 0.1s ease-in;
   -o-transition: background 0.1s ease-in;
@@ -152,10 +155,13 @@ body {
   -moz-transition: transform 0.2s ease-in;
   -o-transition: transform 0.2s ease-in;
   transition: transform 0.2s ease-in;
+  vertical-align: sub;
 }
-.navbar .navitem:hover {
-  background-color: #ffffff;
-  color: #333333;
+.navbar .navitem .text {
+  padding: 0 15px;
+  border: 1px solid #4a87b6;
+  border-width: 0 1px 0 1px;
+  line-height: 45px;
 }
 .navbar .navitem:hover .icon {
   -webkit-transform: rotate(-180deg);
@@ -163,9 +169,9 @@ body {
   -o-transform: rotate(-180deg);
   transform: rotate(-180deg);
 }
-.navbar .navitem .text {
-  padding: 0 5px;
-  line-height: 45px;
+.navbar .navitem:hover .text {
+  background-color: #ffffff;
+  color: #333333;
 }
 .spaceswitcher {
   position: absolute;
@@ -174,7 +180,7 @@ body {
   max-height: 80%;
   border: 1px solid #c0c0c0;
   border-top: none;
-  box-shadow: 0px 2px 5px #eee;
+  box-shadow: 0px 2px 5px #ccc;
   overflow: hidden;
 }
 .spaceswitcher .search .inner {
@@ -194,6 +200,7 @@ body {
   -webkit-appearance: none;
 }
 .spaceswitcher .results {
+  position: relative;
   overflow-y: auto;
 }
 .spaceswitcher .results .group {
