--- a/styles/layout.css
+++ b/styles/layout.css
@@ -158,10 +158,13 @@ body {
   vertical-align: sub;
 }
 .navbar .navitem .text {
+  display: block;
   padding: 0 15px;
-  border: 1px solid #4a87b6;
+  border: 1px solid transparent;
   border-width: 0 1px 0 1px;
+  color: #ffffff;
   line-height: 45px;
+  text-decoration: none;
 }
 .navbar .navitem:hover .icon {
   -webkit-transform: rotate(-180deg);
@@ -170,8 +173,20 @@ body {
   transform: rotate(-180deg);
 }
 .navbar .navitem:hover .text {
+  border-color: #4a87b6;
   background-color: #ffffff;
   color: #333333;
+}
+.content {
+  clear: both;
+  padding: 0 20px;
+}
+.content h1 {
+  margin: 1em 0;
+  font-size: x-large;
+}
+.content p {
+  margin: 1em 0;
 }
 .spaceswitcher {
   position: absolute;
@@ -180,21 +195,24 @@ body {
   max-height: 80%;
   border: 1px solid #c0c0c0;
   border-top: none;
-  box-shadow: 0px 2px 5px #ccc;
+  box-shadow: 0px 4px 5px #ccc;
   overflow: hidden;
+  background: #ffffff;
 }
 .spaceswitcher .search .inner {
-  padding: 5px;
+  margin: 5px;
+  padding: 0 5px 0 25px;
+  border: 1px solid #eee;
+  background: #ffffff url(../images/sprites.svg) no-repeat 5px center;
 }
 .spaceswitcher .search .inner input {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 0 10px 0 25px;
   width: 100%;
   height: 40px;
-  background: #ffffff url(../images/search.png) no-repeat 5px center;
-  border: 1px solid #eee;
+  border: none;
+  background: #ffffff;
   font-size: 100%;
   outline: none;
   -webkit-appearance: none;
