--- a/styles/layout.less
+++ b/styles/layout.less
@@ -17,6 +17,7 @@
 @navbar-height: 45px;
 @navbar-border: 1px;
 @item-padding: 5px;
+@spaceswitcher-background: #fff;
 
 
 body {
@@ -43,20 +44,37 @@ body {
 			vertical-align: sub;
 		}
 		.text {
+			display: block;
 			padding: 0 15px;
-			border: 1px solid @primary-color;
+			border: 1px solid transparent;
 			border-width: 0 1px 0 1px;
+			color: @primary-alt-color;
 			line-height: @navbar-height;
+			text-decoration: none;
 		}
 		&:hover {
 			.icon {
 				.transform(rotate(-180deg));
 			}
 			.text {
+				border-color: @primary-color;
 				background-color: @primary-alt-color;
 				color: @tertiary-color;
 			}
 		}
+	}
+}
+
+.content {
+	clear: both;
+	padding: 0 20px;
+	
+	h1 {
+		margin: 1em 0;
+		font-size: x-large;
+	}
+	p {
+		margin: 1em 0;
 	}
 }
 
@@ -67,20 +85,23 @@ body {
 	max-height: 80%;
 	border: 1px solid #c0c0c0;
 	border-top: none;
-	box-shadow: 0px 2px 5px #ccc;
+	box-shadow: 0px 4px 5px #ccc;
 	overflow: hidden;
+	background: @spaceswitcher-background;
 
 	.search {
 		.inner {
-			padding: @item-padding;
+			margin: @item-padding;
+			padding: 0 @item-padding 0 25px;
+			border: 1px solid #eee;
+			background: #fff url(../images/sprites.svg) no-repeat @item-padding center;
 			
 			input {
 				.box-sizing();
-				padding: 0 10px 0 @item-padding+20;
 				width: 100%;
 				height: 40px;
-				background: #fff url(../images/search.png) no-repeat @item-padding center;
-				border: 1px solid #eee;
+				border: none;
+				background: @spaceswitcher-background;
 				font-size: 100%;
 				outline: none;
 				-webkit-appearance: none;
