--- a/styles/layout.css
+++ b/styles/layout.css
@@ -182,11 +182,20 @@ body {
   padding: 0 20px;
 }
 .content h1 {
-  margin: 1em 0;
+  margin: 25px 0;
   font-size: x-large;
 }
+.content h2 {
+  font-size: large;
+}
 .content p {
-  margin: 1em 0;
+  margin: 15px 0;
+  line-height: 120%;
+}
+.content ul {
+  margin-left: 30px;
+  color: #aaa;
+  list-style: square;
 }
 .spaceswitcher {
   position: absolute;
