--- a/styles/layout.less
+++ b/styles/layout.less
@@ -70,11 +70,20 @@ body {
 	padding: 0 20px;
 	
 	h1 {
-		margin: 1em 0;
+		margin: 25px 0;
 		font-size: x-large;
 	}
+	h2 {
+		font-size: large;
+	}
 	p {
-		margin: 1em 0;
+		margin: 15px 0;
+		line-height: 120%;
+	}
+	ul {
+		margin-left: 30px;
+		color: #aaa;
+		list-style: square;
 	}
 }
 
